Improvements on final video

--- a/writeup_worksheet.ipynb
+++ b/writeup_worksheet.ipynb
@@ -731,9 +731,133 @@
    },
    "outputs": [],
    "source": [
+    "import cv2\n",
+    "import matplotlib.image as mpimg\n",
     "import matplotlib.patheffects as path_effects\n",
+    "import numpy as np\n",
+    "from calibrate_camera import get_calibration_data, undistort_image\n",
+    "from thresholds import get_color_threshold\n",
+    "from warper import get_dst_pts, get_src_pts, warper\n",
     "from warper import warper\n",
     "\n",
+    "\n",
+    "calibration = get_calibration_data()\n",
+    "matrix = calibration['mtx']\n",
+    "distortion_coefficients = calibration['dist']\n",
+    "\n",
+    "image = mpimg.imread('./test_images/test5.jpg')\n",
+    "undistorted = undistort_image(image, matrix, distortion_coefficients)\n",
+    "_, combined_binary = get_color_threshold(undistorted)\n",
+    "\n",
+    "src = get_src_pts()\n",
+    "dst = get_dst_pts()\n",
+    "binary_warped = warper(combined_binary, src, dst)\n",
+    "\n",
+    "# Assuming you have created a warped binary image called \"binary_warped\"\n",
+    "# Take a histogram of the bottom half of the image\n",
+    "histogram = np.sum(binary_warped[binary_warped.shape[0]//2:,:], axis=0)\n",
+    "\n",
+    "# Find the peak of the left and right halves of the histogram\n",
+    "# These will be the starting point for the left and right lines\n",
+    "midpoint = np.int(histogram.shape[0]/2)\n",
+    "leftx_base = np.argmax(histogram[:midpoint])\n",
+    "rightx_base = np.argmax(histogram[midpoint:]) + midpoint\n",
+    "print('midpoint = {}'.format(midpoint))\n",
+    "print('leftx_base = {}  rightx_base = {}'.format(leftx_base, rightx_base))\n",
+    "\n",
+    "# Choose the number of sliding windows\n",
+    "nwindows = 9\n",
+    "\n",
+    "# Set height of windows\n",
+    "window_height = np.int(binary_warped.shape[0]/nwindows)\n",
+    "\n",
+    "# Identify the x and y positions of all nonzero pixels in the image\n",
+    "nonzero = binary_warped.nonzero()\n",
+    "nonzeroy = np.array(nonzero[0])\n",
+    "nonzerox = np.array(nonzero[1])\n",
+    "\n",
+    "# Current positions to be updated for each window\n",
+    "leftx_current = leftx_base\n",
+    "rightx_current = rightx_base\n",
+    "\n",
+    "# Set the width of the windows +/- margin\n",
+    "margin = 100\n",
+    "\n",
+    "# Set minimum number of pixels found to recenter window\n",
+    "minpix = 50\n",
+    "\n",
+    "# Create empty lists to receive left and right lane pixel indices\n",
+    "left_lane_inds = []\n",
+    "right_lane_inds = []\n",
+    "\n",
+    "# Step through the windows one by one\n",
+    "for window in range(nwindows):\n",
+    "    # Identify window boundaries in x and y (and right and left)\n",
+    "    win_y_low = binary_warped.shape[0] - ((window + 1) * window_height)\n",
+    "    win_y_high = binary_warped.shape[0] - (window * window_height)\n",
+    "    win_xleft_low = leftx_current - margin\n",
+    "    win_xleft_high = leftx_current + margin\n",
+    "    win_xright_low = rightx_current - margin\n",
+    "    win_xright_high = rightx_current + margin\n",
+    "\n",
+    "    # Identify the nonzero pixels in x and y within the window\n",
+    "    good_left_inds = ((nonzeroy >= win_y_low) &\n",
+    "                      (nonzeroy < win_y_high) &\n",
+    "                      (nonzerox >= win_xleft_low) &\n",
+    "                      (nonzerox < win_xleft_high)).nonzero()[0]\n",
+    "    good_right_inds = ((nonzeroy >= win_y_low) &\n",
+    "                       (nonzeroy < win_y_high) &\n",
+    "                       (nonzerox >= win_xright_low) &\n",
+    "                       (nonzerox < win_xright_high)).nonzero()[0]\n",
+    "\n",
+    "    # Append these indices to the lists\n",
+    "    left_lane_inds.append(good_left_inds)\n",
+    "    right_lane_inds.append(good_right_inds)\n",
+    "\n",
+    "    # If you found > minpix pixels, recenter next window on their mean position\n",
+    "    if len(good_left_inds) > minpix:\n",
+    "        leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
+    "    if len(good_right_inds) > minpix:\n",
+    "        rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
+    "\n",
+    "# Concatenate the arrays of indices\n",
+    "left_lane_inds = np.concatenate(left_lane_inds)\n",
+    "right_lane_inds = np.concatenate(right_lane_inds)\n",
+    "\n",
+    "# Extract left and right line pixel positions\n",
+    "leftx = nonzerox[left_lane_inds]\n",
+    "lefty = nonzeroy[left_lane_inds]\n",
+    "rightx = nonzerox[right_lane_inds]\n",
+    "righty = nonzeroy[right_lane_inds]\n",
+    "\n",
+    "# Fit a second order polynomial to each\n",
+    "left_fit = np.polyfit(lefty, leftx, 2)\n",
+    "right_fit = np.polyfit(righty, rightx, 2)\n",
+    "\n",
+    "# Generate x and y values for plotting\n",
+    "ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "left_fitx = left_fit[0]*ploty**2 + left_fit[1]*ploty + left_fit[2]\n",
+    "right_fitx = right_fit[0]*ploty**2 + right_fit[1]*ploty + right_fit[2]\n",
+    "\n",
+    "# Define y-value where we want radius of curvature\n",
+    "# I'll choose the maximum y-value, corresponding to the bottom of the image\n",
+    "y_eval = np.max(ploty)\n",
+    "left_curverad = ((1 + (2*left_fit[0]*y_eval + left_fit[1])**2)**1.5) / np.absolute(2*left_fit[0])\n",
+    "right_curverad = ((1 + (2*right_fit[0]*y_eval + right_fit[1])**2)**1.5) / np.absolute(2*right_fit[0])\n",
+    "print(left_curverad, right_curverad)\n",
+    "# Example values: 1926.74 1908.48\n",
+    "\n",
+    "# Define conversions in x and y from pixels space to meters\n",
+    "ym_per_pix = 30/720 # meters per pixel in y dimension\n",
+    "xm_per_pix = 3.7/700 # meters per pixel in x dimension\n",
+    "\n",
+    "# Fit new polynomials to x,y in world space\n",
+    "left_fit_cr = np.polyfit(lefty*ym_per_pix, leftx*xm_per_pix, 2)\n",
+    "right_fit_cr = np.polyfit(righty*ym_per_pix, rightx*xm_per_pix, 2)\n",
+    "\n",
+    "# Calculate the new radii of curvature\n",
+    "left_curverad = ((1 + (2*left_fit_cr[0]*y_eval*ym_per_pix + left_fit_cr[1])**2)**1.5) / np.absolute(2*left_fit_cr[0])\n",
+    "right_curverad = ((1 + (2*right_fit_cr[0]*y_eval*ym_per_pix + right_fit_cr[1])**2)**1.5) / np.absolute(2*right_fit_cr[0])\n",
     "\n",
     "# Create an image to draw the lines on\n",
     "warp_zero = np.zeros_like(binary_warped).astype(np.uint8)\n",
@@ -748,46 +872,57 @@
     "cv2.fillPoly(color_warp, np.int_([pts]), (255, 255, 0))\n",
     "\n",
     "# Drop shadow\n",
+    "avg_curve_radius = np.mean([left_curverad + right_curverad])\n",
+    "text_curve_radius = 'Curvature Radius = {:.4f} (m)'.format(avg_curve_radius)\n",
+    "\n",
+    "lane_center = (leftx_current + rightx_current) / 2\n",
+    "lane_off_center = (lane_center - (image.shape[1] / 2)) * xm_per_pix\n",
+    "text_center_off = 'Vehicle is {:.4f} m {} of center'.format(abs(lane_off_center), 'left' if lane_off_center > 0 else 'right')\n",
+    "\n",
+    "# Drop shadow\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "fontscale = 1.25\n",
+    "thickness = 2\n",
     "cv2.putText(\n",
     "    undistorted,\n",
-    "    'Curvature Radius = 651 (m)',\n",
+    "    text_curve_radius,\n",
     "    (53, 103),\n",
-    "    0,\n",
-    "    2,\n",
+    "    font,\n",
+    "    fontscale,\n",
     "    (0, 0, 0),\n",
-    "    5,\n",
+    "    thickness,\n",
     "    cv2.LINE_AA\n",
     ")\n",
     "cv2.putText(\n",
     "    undistorted,\n",
-    "    'Curvature Radius = 651 (m)',\n",
+    "    text_curve_radius,\n",
     "    (50, 100),\n",
-    "    0,\n",
-    "    2,\n",
+    "    font,\n",
+    "    fontscale,\n",
     "    (255, 255, 0),\n",
-    "    5,\n",
+    "    thickness,\n",
     "    cv2.LINE_AA\n",
     ")\n",
     "\n",
     "# Primary color\n",
     "cv2.putText(\n",
     "    undistorted,\n",
-    "    'Vehicle is {}m {} of center'.format(0.5, 'left'),\n",
+    "    text_center_off,\n",
     "    (53, 163),\n",
-    "    cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "    2,\n",
+    "    font,\n",
+    "    fontscale,\n",
     "    (0, 0, 0),\n",
-    "    5,\n",
+    "    thickness,\n",
     "    cv2.LINE_AA\n",
     ")\n",
     "cv2.putText(\n",
     "    undistorted,\n",
-    "    'Vehicle is {}m {} of center'.format(0.5, 'left'),\n",
+    "    text_center_off,\n",
     "    (50, 160),\n",
-    "    cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "    2,\n",
+    "    font,\n",
+    "    fontscale,\n",
     "    (255, 255, 0),\n",
-    "    5,\n",
+    "    thickness,\n",
     "    cv2.LINE_AA\n",
     ")\n",
     "\n",
@@ -797,24 +932,16 @@
     "# Combine the result with the original image\n",
     "result = cv2.addWeighted(undistorted, 1, newwarp, 0.3, 0)\n",
     "fig = plt.figure(figsize=(15, 9))\n",
-    "plt.imshow(result);\n",
-    "\n",
-    "# plt.text(\n",
-    "#     50,\n",
-    "#     100,\n",
-    "#     'Curvature Radius',\n",
-    "#     path_effects=[path_effects.withSimplePatchShadow(shadow_rgbFace='r')],\n",
-    "#     fontsize=36,\n",
-    "#     color=\"y\",\n",
-    "#     alpha=1.0\n",
-    "# )\n"
+    "plt.imshow(result);\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1026,29 +1153,33 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "video_output = 'yellow_brick_road.mp4'\n",
-    "clip1 = VideoFileClip(\"project_video.mp4\")\n",
-    "yellow_clip = clip1.fl_image(pipeline) #NOTE: this function expects color images!!\n",
-    "%time yellow_clip.write_videofile(video_output, audio=False)"
+    "# video_output = 'yellow_brick_road.mp4'\n",
+    "# clip1 = VideoFileClip(\"project_video.mp4\")\n",
+    "# yellow_clip = clip1.fl_image(pipeline) #NOTE: this function expects color images!!\n",
+    "# %time yellow_clip.write_videofile(video_output, audio=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "HTML(\"\"\"\n",
-    "<video width=\"960\" height=\"540\" controls>\n",
-    "  <source src=\"{0}\">\n",
-    "</video>\n",
-    "\"\"\".format(video_output))"
+    "# HTML(\"\"\"\n",
+    "# <video width=\"960\" height=\"540\" controls>\n",
+    "#   <source src=\"{0}\">\n",
+    "# </video>\n",
+    "# \"\"\".format('https://youtu.be/W0xzcFRIw2g'))"
    ]
   },
   {
@@ -1071,9 +1202,22 @@
     "\n",
     "#### 1. Provide a link to your final video output.  Your pipeline should perform reasonably well on the entire project video (wobbly lines are ok but no catastrophic failures that would cause the car to drive off the road!).\n",
     "\n",
-    "Here's a [link to my video result](./project_video.mp4)\n",
+    "Here's a [link to my video result](https://youtu.be/W0xzcFRIw2g)\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "HTML('<iframe width=\"978\" height=\"550\" src=\"https://www.youtube.com/embed/W0xzcFRIw2g\" frameborder=\"0\" allowfullscreen></iframe>')\n"
    ]
   },
   {
